--- a/Templates/Designs/TTonlineNew/New_SectionLandingPage.cshtml
+++ b/Templates/Designs/TTonlineNew/New_SectionLandingPage.cshtml
@@ -360,12 +360,22 @@ string filterValue8= "Item.Tip='Articole'";
                       <a href="{{link}}" class="overlay-link">
                           <figure class=""> 
                             <img src="/Admin/Public/GetImage.ashx?Image={{image}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=350&Height=230" class="img-responsive"/>    
-                             <div class="stickers-container stickers-container--top-left hidden">
-                                <div class="sticker sticker--new">New!</div>
-                              </div>
-                              <div class="stickers-container stickers-container--top-right hidden">
-                                 <div class="sticker sticker--new">Sale!</div>
-                              </div>         
+                              {{#ifCond valoareDiscount '!==' ""}}                               
+                                {{#if showPromotie}}
+                                     <div class="stickers-container stickers-container--top-left">
+                                         <div class="sticker sticker--new">
+                                             <div class="col-xs-12 text-center">
+                                                - {{valoareDiscount}} %
+                                             </div>
+                                         </div>
+                                     </div>
+                                {{/if}}
+                            {{/ifCond}}
+                            {{#if produsPromovat}}
+                                <div class="stickers-container stickers-container--top-right">
+                                    <div class="sticker sticker--new">@Translate("Promovat")</div>
+                                </div>
+                            {{/if}}       
                           </figure>
                       </a>
                  </div>
@@ -470,12 +480,22 @@ string filterValue8= "Item.Tip='Articole'";
                       <a href="{{link}}" class="overlay-link">
                           <figure class=""> 
                             <img src="/Admin/Public/GetImage.ashx?Image={{image}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=350&Height=230" class="img-responsive"/>   
-                           <div class="stickers-container stickers-container--top-left hidden">
-                              <div class="sticker sticker--new">New!</div>
-                            </div>
-                            <div class="stickers-container stickers-container--top-right hidden">
-                               <div class="sticker sticker--new">Sale!</div>
-                            </div>                             
+                             {{#ifCond valoareDiscount '!==' ""}}                               
+                                   {{#if showPromotie}}
+                                        <div class="stickers-container stickers-container--top-left">
+                                            <div class="sticker sticker--new">
+                                                <div class="col-xs-12 text-center">
+                                                   - {{valoareDiscount}} %
+                                                </div>
+                                            </div>
+                                        </div>
+                                   {{/if}}
+                               {{/ifCond}}
+                               {{#if produsPromovat}}
+                                   <div class="stickers-container stickers-container--top-right">
+                                       <div class="sticker sticker--new">@Translate("Promovat")</div>
+                                   </div>
+                               {{/if}}                            
                           </figure>
                       </a>
                  </div>
