--- a/Templates/Designs/TTonlineNew/Includes/PageTemplates/MasterHelpers.cshtml
+++ b/Templates/Designs/TTonlineNew/Includes/PageTemplates/MasterHelpers.cshtml
@@ -89,7 +89,7 @@ if (string.IsNullOrEmpty(System.Web.HttpContext.Current.Request.Params["ProductI
     }
     @*<link rel="stylesheet" href="@styleBundle" />*@
     @*<link rel="stylesheet" href="/Files/Templates/Designs/TTonlineNew/css/custom.css"/>*@
-    <link rel="stylesheet" href="/Files/Templates/Designs/TTonlineNew/dist/custom.css" async/>
+    <link rel="stylesheet" href="/Files/Templates/Designs/TTonlineNew/dist/custom.css?v=2" async/>
    @* <script src="@scriptBundleHeader"></script>*@
     @GetString("Javascripts")
     @RenderSnippet("externalScripts")
