--- a/Templates/Designs/TTonlineNew/eCom/Product/_Product.cshtml
+++ b/Templates/Designs/TTonlineNew/eCom/Product/_Product.cshtml
@@ -435,7 +435,7 @@
                     string link = i.GetString("Ecom:Product.Link.Clean");
                     string noImage = "/Files/Images/no-image.png";
 
-                    <div class="col-xs-3">
+                    <div class="col-xs-6 col-md-3">
                         <img src="@mainImage" alt='' class="img-responsive"/>
                         <div class="alte-produse-link text-center">
                             <a href="@link">Vezi detalii</a>
