Tooltip (mesaj alternativ) peste elementele din meniu(2)

--- a/Templates/Designs/TTonlineNew/css/custom.css
+++ b/Templates/Designs/TTonlineNew/css/custom.css
@@ -10179,15 +10179,12 @@ only screen and (min-device-pixel-ratio:1.5) {
 }
 
 #tiptip_content {
-	font-size: 11px;
-	color: #fff;
-	text-shadow: 0 0 2px black;
+	font-size: 14px;
+	color: #000;
 	padding: 4px 8px;
 	border: 1px solid rgba(255, 255, 255, .25);
-	background-color: rgba(25, 25, 25, .92);
-	background-image: linear-gradient(transparent, black);
+	background-color: #fff;
 	border-radius: 3px;
-	box-shadow: 0 0 3px #555
 }
 
 #tiptip_arrow,
@@ -10243,10 +10240,10 @@ only screen and (min-device-pixel-ratio:1.5) {
 @media screen and (-webkit-min-device-pixel-ratio:0) {
 	#tiptip_content {
 		padding: 4px 8px 5px 8px;
-		background-color: rgba(45, 45, 45, .88)
+		background-color: #fff;
 	}
 	#tiptip_holder.tip_bottom #tiptip_arrow_inner {
-		border-bottom-color: rgba(45, 45, 45, .88)
+		border-bottom-color: #fff
 	}
 	#tiptip_holder.tip_top #tiptip_arrow_inner {
 		border-top-color: rgba(20, 20, 20, .92)
