--- a/Templates/Designs/TTonlineNew/eCom/ProductList/Comparare.cshtml
+++ b/Templates/Designs/TTonlineNew/eCom/ProductList/Comparare.cshtml
@@ -58,10 +58,10 @@ string Producator = System.Web.HttpContext.Current.Request["Producator"] != null
 string Dealer = System.Web.HttpContext.Current.Request["Dealer"] != null ? System.Web.HttpContext.Current.Request["Dealer"].ToString(): "";
 bool first = true;
 
-DateTime dataExpirarePromotie =  DateTime.Parse(i.GetProductFieldValue("DataExpirarePromotie").ToString());
+DateTime dataExpirarePromotie =  DateTime.Parse(i.GetDate("DataExpirarePromotie").ToString());
 DateTime CurrentDate = DateTime.Now;
-string produsPromovat = i.GetProductFieldValue("ProdusPromovat").ToString();
-string ValoareDiscount = i.GetProductFieldValue("ValoareDiscount").ToString();
+string produsPromovat = i.GetString("Ecom:Product:Field.ProdusPromovat");
+string ValoareDiscount = i.GetString("Ecom:Product:Field.ValoareDiscount");
 
 if(Dealer == "" && Producator == ""){
 <div class="col-xs-12 col-sm-6 col-md-4 " style="margin-bottom:15px; margin-top:15px; ">
@@ -125,7 +125,7 @@ if(Dealer == "" && Producator == ""){
 
         </div>
 
-        <div class="col-xs-12 col-descriere-produs-compare">
+        <div class="col-descriere-produs-compare">
 
           @descriereProdus
         </div>
@@ -158,14 +158,14 @@ if(Dealer == "" && Producator == ""){
     <div class="row" style="min-height:35px;">
       <div class="col-xs-12">
              @if(dealeriProdus.Any()){
-          <div class="col-xs-3" style="text-align: center;">      
+          <div class="col-xs-4" style="text-align: center;">      
                <p class="simple-share manufacturer" style="text-align:left; font-size: 12px; line-height: 1.2;">
                 <text>@Translate("Furnizor", "Furnizor"):</text>         
                </p>
             </div>
           
 
-            <div class="col-xs-9" style="text-align: center;">
+            <div class="col-xs-8" style="text-align: center;">
               <p class="simple-share manufacturer" style="text-align:left; font-size: 12px; line-height: 1.2;">
              <text style="color:black;">@(dealeriProdus.Length == 1 ? dealeriProdus.First() :  dealeriProdus.Length + " furnizori")</text>
               </p>
