--- a/Templates/Designs/TTonlineNew/eCom/Product/_Product.cshtml
+++ b/Templates/Designs/TTonlineNew/eCom/Product/_Product.cshtml
@@ -422,7 +422,7 @@
         @if (GetLoop("eCom:Related.MoreFromSameManufacturer").Any())
         {
             <div class="col-xs-12">
-                <h4>Produse de acelasi brand/producator</h4>
+                <h4><span>Produse de acelasi brand/producator</span></h4>
             </div>
             foreach (LoopItem i in GetLoop("eCom:Related.MoreFromSameManufacturer"))
             {
