--- a/Templates/Designs/TTonlineNew/Custom/Footer.cshtml
+++ b/Templates/Designs/TTonlineNew/Custom/Footer.cshtml
@@ -12,7 +12,7 @@ string AdresaLogoFooter= "https://" + GetGlobalValue("Global:Request.Host")+ "/F
             <div class="container">
                 <div class="mag-content">
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-md-5">
                             <div class="footer-block clearfix">
                                 <h3>@Translate("link", "Link-uri utile"):</h3> 
 
@@ -28,7 +28,7 @@ string AdresaLogoFooter= "https://" + GetGlobalValue("Global:Request.Host")+ "/F
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <div class="footer-block clearfix">
                                 <h3>@Translate("aboutUs", "DESPRE NOI"):</h3>
                                 <p>@Pageview.Area.Item["FooterAbout"]</p>
@@ -60,7 +60,7 @@ string AdresaLogoFooter= "https://" + GetGlobalValue("Global:Request.Host")+ "/F
                     <div class="row">
                         <div class="col-md-6">
                             <p>@Translate("copyright", "Copyright"): @Translate("TehnicMedia2017", "Tehnic Media") &copy; @DateTime.Now.Year.
-                            <a href="http://www.tehnicmedia.ro"><img src="@AdresaLogoFooter" width="" height=""></a></p>
+                            <a href="https://www.tehnicmedia.ro"><img src="@AdresaLogoFooter" width="" height=""></a></p>
                         </div>
                         <div class="col-md-6">
                             <div class="social-icons pull-right">
