--- a/Templates/Designs/TTonlineNew/Paragraph/New_ListStiri.cshtml
+++ b/Templates/Designs/TTonlineNew/Paragraph/New_ListStiri.cshtml
@@ -33,7 +33,7 @@
             <div class="simple-thumb" style="width: 250px!important;">
                 <a href="aa">
                     <figure class="">
-                        <img src="/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=255&Height=168"/> 
+                        <img src="/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=5&Format=jpg&Width=255&Height=168" alt="{{itemTitlu}}"/> 
                     </figure>
                 </a>
             </div>
