--- a/Templates/Designs/TTonlineNew/New_Homepage.cshtml
+++ b/Templates/Designs/TTonlineNew/New_Homepage.cshtml
@@ -3,7 +3,9 @@
 @GetValue("Description(Homepage)")
 
 @Include("Includes/New_PlaceholderHelpers.cshtml")
-
+@{
+	string dataView = System.Web.HttpContext.Current.Request.Cookies["newsletter"] != null ? System.Web.HttpContext.Current.Request.Cookies["newsletter"].Value : "";
+}
 
 <div class="row">
   <div class="col-sm-12">
@@ -71,7 +73,21 @@
   </div>
 </div>      
 <!-- </div> -->
+@*newsletter modal*@
+@if(dataView == "") {
+	<div class="modal bd-example-modal-sm" id="NewsletterSignUp" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"  aria-hidden="true">
+      <div class="modal-dialog modal-sm">
+          <div class="modal-content" >
+            <button type="button" class="btn btn-primary float-right exit-modal" data-dismiss="modal">X</button>
+            @RenderParagraphContent(164)
+          </div>
+          <div class="modal-footer">                            
+          </div>
+      </div>                      
+  </div>
 
+}
+@*newsletter modal*@
 @RenderSnippet("ProductCarouselModal")
 <div id="loader"><div class="loader-icon"></div></div>
 <!-- Google Analytics -->
